# algokit-core

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.py  bun.lockb  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/as-python-version/: action.yml
.github/workflows/: api_clients_ci.yml  ci_cd.yml  polytest_validate.yml  python.yml  python_api_client_ci_cd.yml  python_uniffi_ci_cd.yml  swift_ci.yml  test.yml  typescript_api_client_ci_cd.yml  typescript_ci.yml  typescript_wasm_ci_cd.yml
.zed/: settings.json
algo_models/: Cargo.toml  build.py
algo_models/tests/js/: .gitignore  package.json
algo_models/tests/js/pkg/: algo_models.js  package.json
algo_models/tests/py/: algo_models.py  app.py
algo_models_rs/: Cargo.toml  build.py  uniffi-bindgen.rs
algo_models_rs/src/: foreign_exports.rs  lib.rs
algo_models_rs/tests/js/: index.ts  package.json
algo_models_rs/tests/js/pkg/: algo_models_rs.js  package.json
algo_models_rs/tests/py/: .gitignore  algo_models_rs.py
api/: .gitignore  README.md  bun.lockb  notes.md  package-lock.json  package.json
api/oas_templates/python/: .openapi-generator-ignore  README.mustache  api_test.mustache  conftest.mustache  model_test.mustache  openapi-config.yaml  pyproject.mustache
api/oas_templates/python/custom_tests/: test_transactions.mustache
api/oas_templates/typescript/: README.mustache  openapi-config.yaml  package.mustache  tsconfig.esm.mustache
api/oas_templates/typescript/api/: api.mustache
api/oas_templates/typescript/custom_tests/: transactions.test.mustache
api/oas_templates/typescript/http/: http.mustache  isomorphic-fetch.mustache
api/oas_templates/typescript/model/: ObjectSerializer.mustache
api/oas_templates/typescript/types/: ObjectParamAPI.mustache  ObservableAPI.mustache  PromiseAPI.mustache
api/scripts/: convert-openapi.ts  generate-algod-clients.ts  generate-clients.ts
api/specs/: algod.oas2.json  algod.oas3.json  compatibility.md
crates/algo_models/: Cargo.toml  README.md  build.py
crates/algo_models/src/: lib.rs
crates/algo_models/tests/js/: index.ts  tsconfig.json
crates/algo_models/tests/py/: .gitignore
crates/algo_models_ffi/: Cargo.toml  build.py  polytest.toml  pyproject.toml  test_data.json  uniffi.toml
crates/algo_models_ffi/src/: lib.rs
crates/algo_models_ffi/tests/: generate_test_data.py  test_data.json
crates/algo_models_ffi/tests/SwiftTests/: Package.swift
crates/algo_models_ffi/tests/SwiftTests/.build/arm64-apple-macosx/debug/SwiftTests.build/: output-file-map.json
crates/algo_models_ffi/tests/SwiftTests/Sources/SwiftTests/: main.swift
crates/algo_models_ffi/tests/SwiftTests/Sources/algo_models/: algo_models.swift
crates/algo_models_ffi/tests/js/: .gitignore  bun.lockb  index.test.ts  index.ts  package.json  tsconfig.json
crates/algo_models_ffi/tests/py/: .gitignore  algo_models_ffi.py  app.py  requirements.txt  test_payment.py
crates/algo_models_ffi/tests/swift/: Package.swift
crates/algokit_transact/: Cargo.toml  README.md
crates/algokit_transact/src/: address.rs  constants.rs  error.rs  lib.rs  tests.rs  traits.rs  utils.rs
crates/algokit_transact/src/test_utils/: mod.rs
crates/algokit_transact/src/transactions/: asset_transfer.rs  common.rs  mod.rs  payment.rs
crates/algokit_transact_ffi/: Cargo.toml  README.md  build.rs  polytest.toml  test_data.json  test_plan.md  uniffi.toml
crates/algokit_transact_ffi/src/: lib.rs
crates/ffi_macros/: Cargo.toml
crates/ffi_macros/src/: lib.rs
crates/uniffi-bindgen/: Cargo.toml
crates/uniffi-bindgen-swift/: Cargo.toml
docs/contributing/: contributing_guide.md  learning_resources.md
docs/decisions/: 0000-native-implementations-vs-ffi.md
docs/research/: ffi_garbage_collection.md  glibc_and_musl.md  openapi-generators.md
scripts/: package.json
scripts/generate_test_data/: README.md  index.ts  package.json
src/: foreign_exports.rs  lib.rs  wasm_exports.rs
tests/js/: bun.lockb  index.ts
tests/js/pkg/: algo_models_rs.d.ts  algo_models_rs.js
tests/py/: algo_models_rs.py  app.py
tools/cargo-bin/: Cargo.toml
uniffi-bindgen/: Cargo.toml  README.md
utils/: semantic-release.cjs
