[package]
name = "algo-models-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.133"
thiserror = "2.0.7"
tsify-next = {version = "0.5.4", features = ["js"]}
wasm-bindgen = "0.2.99"

[dev-dependencies]
wasm-pack = "0.13.1"
