[workspace]
resolver = "2"
members = [
  "crates/algokit_transact",
  "crates/algokit_transact_ffi",
  "crates/ffi_macros",
  "crates/uniffi-bindgen",
  "tools/cargo-bin",
]

[workspace.dependencies]
uniffi = { version = "0.28.3" }
thiserror = { version = "2.0.7" }
wasm-bindgen = { version = "0.2.99" }
tsify-next = { version = "0.5.4", features = ["js"] }

[workspace.metadata.bin]
polytest = { version = "0.3.0", locked = true }
