[package]
name = "algo-models-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ffi_wasm = ["dep:wasm-bindgen", "dep:tsify-next"]
ffi_uniffi = ["dep:uniffi"]

[dependencies]
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.133"
thiserror = "2.0.7"
tsify-next = {version = "0.5.4", features = ["js"], optional = true}
uniffi = { version = "0.28.3", features=["scaffolding-ffi-buffer-fns", "cli"], optional = true }
wasm-bindgen = {version = "0.2.99", optional = true}

[dev-dependencies]
wasm-pack = "0.13.1"
uniffi = { version = "0.28.3", features = ["bindgen-tests"] }

[build-dependencies]
# Add the "scaffolding-ffi-buffer-fns" feature to make sure things can build correctly
uniffi = { version = "0.28.3", features = ["build", "scaffolding-ffi-buffer-fns"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"