[package]
name = "algo_models"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base32 = "0.5.1"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
sha2 = "0.10.8"
thiserror = "2.0.7"

[dev-dependencies]
pretty_assertions = "1.4.1"
