[package]
name = "algo_models_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ffi_uniffi"]
ffi_wasm = ["dep:wasm-bindgen", "dep:tsify-next"]
ffi_uniffi = ["dep:uniffi"]

[dependencies]
algo_models = { path = "../algo_models" }

thiserror = "2.0.7"
rmp-serde = "1.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"

tsify-next = { version = "0.5.4", features = ["js"], optional = true }
uniffi = { version = "0.28.3", features = [
    "scaffolding-ffi-buffer-fns",
], optional = true }
wasm-bindgen = { version = "0.2.99", optional = true }


[dev-dependencies]
wasm-pack = "0.13.1"
uniffi = { version = "0.28.3", features = ["bindgen-tests"] }

[build-dependencies]
uniffi = { version = "0.28.3", features = [
    "build",
    "scaffolding-ffi-buffer-fns", # Add the "scaffolding-ffi-buffer-fns" feature to make sure things can build correctly
] }
