[package]
name = "algokit_transact"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test_utils = ["dep:base64"]

[dependencies]
base32 = "0.5.1"
base64 = { version = "0.22.1", optional = true }
derive_builder = { version = "0.20.2" }
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
sha2 = "0.10.8"
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
algokit_transact = { path = '.', features = ["test_utils"] }
