[package]
name = "algokit_transact_ffi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["ffi_uniffi"]
ffi_wasm = ["dep:wasm-bindgen", "dep:tsify-next"]
ffi_uniffi = ["dep:uniffi"]

[dependencies]
algokit_transact = { path = "../algokit_transact", features = ['test_utils'] }
ffi_macros = { path = "../ffi_macros" }

thiserror = { workspace = true }
rmp-serde = "1.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"

tsify-next = { workspace = true, optional = true }
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns",
], optional = true }
wasm-bindgen = { workspace = true, optional = true }
pretty_assertions = "1.4.1"


[dev-dependencies]
wasm-pack = "0.13.1"
uniffi = { workspace = true, features = ["bindgen-tests"] }

[build-dependencies]
uniffi = { workspace = true, features = [
  "scaffolding-ffi-buffer-fns", # Add the "scaffolding-ffi-buffer-fns" feature to make sure things can build correctly
] }
algokit_transact = { path = "../algokit_transact", features = ['test_utils'] }
ffi_macros = { path = "../ffi_macros" }
thiserror = { workspace = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.133"
tsify-next = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
